deployment/istio/upload-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upload-service
  labels:
    app: upload-service
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: upload-service
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-service
spec:
  selector:
    matchLabels:
      app: upload-service
  replicas: 1
  template:
    metadata:
      labels:
        app: upload-service
        version: v1
    spec:
      containers:
      - name: upload-service
        image: gcr.io/thumby-2049/upload-service:latest
        ports:
        - containerPort: 8080
        args:
        - --gcp.bucket-name=thumby_bucket
        - --thumbnail-service.port=8888
        - --thumbnail-service.hostname=generator-service.default
