deployment/istio/generator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: generator-service
  labels:
    app: generator-service
spec:
  ports:
  - port: 8888
    name: http
  selector:
    app: generator-service
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: generator-service
spec:
  selector:
    matchLabels:
      app: generator-service
  replicas: 1
  template:
    metadata:
      labels:
        app: generator-service
        version: v1
    spec:
      containers:
      - name: generator-service
        image: gcr.io/thumby-2049/generator-service:latest
        ports:
        - containerPort: 8888
        args:
        - --gcp.bucket-name=thumby_bucket

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: generator-service-vs
spec:
  hosts:
  - generator-service
  http:
  # delay for 'info' request
  - match:
    - uri:
        prefix: "/info"
    route:
    - destination:
        host: generator-service
        port:
          number: 8888
    fault:
      delay:
        percent: 100
        fixedDelay: 1s
      abort:
        percent: 60
        httpStatus: 501
  # default route to generator service, injects faults from time to time to each request
  - route:
    - destination:
        host: generator-service
        port:
          number: 8888
  #  fault:
  #    delay:
  #      percent: 100 # 100% of all requests get a delay of 3s
  #      fixedDelay: 3s
  #    abort:
  #      percent: 50 # 50% of all requests returns with a 501
  #      httpStatus: 501
